# yamada6

./: .dockerignore  .gitignore  AGENTS.md  README.md  yamada6.md  yamada6_better.md
agent/: pyproject.toml
agent/scripts/: apply_patch.py  manage.py
agent/scripts/hooks/: patch_apply_git.sh  patch_apply_sample.sh  patch_rollback_sample.sh
agent/src/agent/: executor.py  planner.py  scheduler.py
agent/src/agent/runtime/: app.py  entrypoint.py  patch_executor.py  server.py
agent/src/agent/staging/: __init__.py  worker.py
agent/tests/integration/: test_runtime_api.py
agent/tests/unit/: test_planner.py
docker/: Dockerfile.runtime  Dockerfile.staging  compose.yml
docs/: DOCKER.md  HOST_SETUP.md  OVERVIEW.md  PATCH_HOOKS.md  PATCH_WORKFLOW.md
host-tools/: apply_patch.sh  backup.sh  configure-hooks.sh  demo_patch.sh  run_runtime.sh  staging_worker.sh  start.sh  stop.sh
webui/static/: app.js  index.html  style.css
