[tool.poetry]
name = "yamada6-agent"
version = "0.1.0"
description = "Yamada6 runtime agent"
authors = ["Yamada Project"]
packages = [{ include = "agent", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
